--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -6,7 +6,8 @@
     "dev": "start-storybook -p 6006",
     "build": "build-storybook --docs",
     "preview-storybook": "serve storybook-static",
-    "clean": "rm -rf .turbo && rm -rf node_modules"
+    "clean": "rm -rf .turbo && rm -rf node_modules",
+    "chromatic": "chromatic --exit-zero-on-changes"
   },
   "dependencies": {
     "@acme/core": "workspace:0.0.0",
@@ -22,6 +23,7 @@
     "@storybook/builder-vite": "^0.1.41",
     "@storybook/react": "^6.5.14",
     "@vitejs/plugin-react": "^1.3.2",
+    "chromatic": "^6.17.0",
     "eslint-config-acme": "workspace:0.0.0",
     "serve": "^13.0.4",
     "typescript": "^4.9.3",
