--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -3,30 +3,32 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "start-storybook -p 6006",
-    "build": "build-storybook --docs",
-    "preview-storybook": "serve storybook-static",
+    "dev": "storybook dev -p 6006",
+    "build": "storybook build  -c .storybook -o ./dist --docs",
+    "preview-storybook": "serve dist",
     "clean": "rm -rf .turbo && rm -rf node_modules",
     "chromatic": "chromatic --exit-zero-on-changes"
   },
   "dependencies": {
-    "@acme/core": "workspace:0.0.0",
+    "@acme/ui": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@acme/tsconfig": "workspace:0.0.0",
-    "@storybook/addon-actions": "^6.5.14",
-    "@storybook/addon-docs": "^6.5.14",
-    "@storybook/addon-essentials": "^6.5.14",
-    "@storybook/addon-links": "^6.5.14",
-    "@storybook/builder-vite": "^0.1.41",
-    "@storybook/react": "^6.5.14",
-    "@vitejs/plugin-react": "^1.3.2",
-    "chromatic": "^6.17.0",
-    "eslint-config-acme": "workspace:0.0.0",
+    "@acme/tsconfig": "workspace:*",
+    "@storybook/addon-actions": "^7.0.24",
+    "@storybook/addon-docs": "^7.0.24",
+    "@storybook/addon-essentials": "^7.0.24",
+    "@storybook/addon-links": "^7.0.24",
+    "@storybook/react": "^7.0.24",
+    "@storybook/react-vite": "^7.0.24",
+    "@vitejs/plugin-react": "^4.0.1",
+    "chromatic": "^6.19.9",
+    "eslint-config-acme": "workspace:*",
+    "eslint-plugin-storybook": "^0.6.12",
     "serve": "^13.0.4",
-    "typescript": "^4.9.3",
-    "vite": "^2.9.15"
+    "storybook": "^7.0.24",
+    "typescript": "4.9.3",
+    "vite": "^4.3.9"
   }
 }
