--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/utils",
+  "name": "@acme/ui",
   "version": "0.0.0",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -7,8 +7,19 @@
   "sideEffects": false,
   "license": "MIT",
   "files": [
-    "dist/**"
+    "dist"
   ],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.mjs"
+    },
+    "./styles.css": "./dist/index.css",
+    "./config": {
+      "require": "./tailwind.config.cjs"
+    },
+    "./src/*": "./src/*"
+  },
   "scripts": {
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
@@ -19,13 +30,19 @@
     "@acme/tsconfig": "workspace:*",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.15.0",
     "eslint-config-acme": "workspace:*",
+    "postcss": "^8.4.24",
     "react": "^18.1.0",
+    "tailwindcss": "^3.3.2",
     "tsup": "^5.10.1",
-    "typescript": "^4.5.3"
+    "typescript": "4.9.3"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "class-variance-authority": "^0.6.1"
   }
 }
